<resources>
    <string name="app_name">AgendaAssist</string>

    <string name="dailyplanner_appbar_title">Tuesday, Jan 1</string>

    <string name="date_option_title">Change Date</string>
    <string name="task_toggle_option_title">Start/Stop Tasks</string>
    <string name="break_option_title">Take a Break</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailyplanner_button">Daily Planner</string>
    <string name="activityplanner_button">Activity Planner</string>
    <string name="stats_button">View Statistics</string>
    <string name="scheduled_tab">Scheduled</string>
    <string name="completed_tab">Completed</string>
    <string name="default_task">*to do task*</string>
    <string name="sub_menu_name">menu</string>
    <string name="start_stop_title">start/stop</string>
    <string name="example_date">8/14/2019</string>
    <string name="default_category">*to do category*</string>
    <string name="default_time">00:00</string>
    <string name="dailyplanner_title">Daily Planner</string>
    <string name="activityplanner_title">Activity Planner</string>
    <string name="statisticsviewer_title">Statistics Viewer</string>
    <string name="task_categories_title">To-Do Lists</string>
    <string name="category_text">*category*</string>
    <string name="total_time_text">Total Time Tracked:</string>
    <string name="average_time_text">Average Task Length:</string>
    <string name="help_button_text">Help/Tutorial</string>
    <string name="save_button_text">Manual Save</string>
</resources>
